fix mistakes